--- a/universalcc.html
+++ b/universalcc.html
@@ -139,9 +139,7 @@
                                     [ UNIVERSAL CC ]</a
                                 >
                             </p>
-                            <div
-                                class="text-sm text-black bg-white p-4 rounded-xl border-4 border-black border-dashed mb-6"
-                            >
+                            <div class="text-sm text-black bg-white p-4 rounded-xl border-4 border-black border-dashed mb-6">
                                 <p class="unbounded-400 ">
                                     <strong>NOTE : </strong> If your download link is not opening after payment, send a
                                     screenshot via WhatsApp:
@@ -172,10 +170,8 @@
         <div class="pt-20 pb-8 px-4 block lg:hidden">
             <div class="max-w-md mx-auto relative">
                 <div class="absolute w-full h-full bg-black rounded-2xl translate-x-3 translate-y-3 z-0"></div>
-
                 <div class="relative p-6 bg-white rounded-2xl border-2 border-black z-10">
                     <h1 class="text-xl font-extrabold text-center mb-4 bbh-sans-bartle-regular">Make Payment</h1>
-
                     <!-- QR Code -->
                     <div class="flex justify-center mb-6">
                         <div
@@ -184,7 +180,6 @@
                             <img src="myqr.jpeg" class="w-52 h-52 object-contain rounded-xl shadow-lg" />
                         </div>
                     </div>
-
                     <!-- UPI -->
                     <p class="text-xs text-center font-medium mb-4">
                         <span class="text-gray-800 font-bold press-start-2p-regular">UPI ID:</span><br /><br />
@@ -195,12 +190,9 @@
                             akshat3825@okaxis
                         </span>
                     </p>
-
                     <p class="text-black text-center mb-4 font-semibold momo-trust-display-regular">
                         You will get:<br> <span class="text-xl bungee-spice-regular">[ UNIVERSAL CC ]</span>
                     </p>
-
-                    <!-- NOTE -->
                     <div class="text-sm bg-white p-4 rounded-xl border-2 border-black border-dashed text-center">
                         <p class="unbounded-400"><strong>NOTE:</strong> Send payment screenshot via WhatsApp:</p>
                         <p class="flex justify-center items-center text-md font-semibold cursor-pointer hover:text-lg active:scale-95 mt-2 bungee-spice-regular" onclick="copyText('9279028806')">
